# proectirovanie

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/db/: __init__.py  base.py  datasets.py  jobs.py
app/handlers/: datasets.py  training.py  web.py
app/schemas/: responses.py
app/services/: datasets.py  sklearn_pipeline.py  training.py
