[project]
name = "bigdata-mvp"
version = "0.1.0"
description = "MVP: загрузка CSV, обучение моделей pandas + scikit-learn, веб-интерфейс"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "dependency-injector",
    "fastapi",
    "prometheus-client",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "sentry-sdk",
    "uvicorn",
    "sqlalchemy[asyncio]>=2.0",
    "sqlmodel>=0.0.22",
    "asyncpg",
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
    "python-multipart",
    "jinja2",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D", "FA", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"app/settings.py" = ["S105"]
"migrations/**" = ["INP001"]
"tests/**" = ["S101", "PLR2004", "TRY003", "EM101", "ANN401"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "joblib"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
